@startuml
' --- Configuration ---
skinparam style strictuml
skinparam linetype ortho
skinparam packageStyle rectangle
top to bottom direction

' By placing the packages side-by-side, we can make the dependencies flow more clearly from left to right.
package "fr-line-agent-sample-app" {
    package "Presentation" {
        class WebhookRoute {
            + handle(call: ApplicationCall): Unit
        }
        class PushTriggerRoute {
            + handle(call: ApplicationCall): Unit
        }
    }

    package "Domain" {
        class LineBotService {
            # createReplyMessage(event, botId): String?
            # createPushNotifications(): List<Notification>
        }
        interface SheetsRepository <<interface>> {
            + fetchSheetData(range: String): List<List<Any>>
        }
    }

    package "Infrastructure" {
        class GoogleSheetsRepositoryImpl {
            + fetchSheetData(range: String): List<List<Any>>
        }
        class LineMessagingClientImpl {
            + reply(token: String, message: String): Result<Unit>
            + push(to: String, message: String): Result<Unit>
        }
        class LineSignatureVerifierImpl {
            + verify(body: String, signature: String): Boolean
        }
        class SecretManagerProvider {
            + getSecret(key: String): String
        }
    }
}

' Use hidden link to position the core package to the right of the app package.
"fr-line-agent-sample-app" -[hidden]right- "fr-line-agent-core"

package "fr-line-agent-core" {
    package "Domain" #LightGray {
        abstract class AbstractLineBotService {
            + handleWebhook(body, signature): Result<Unit>
            + executePush(): Result<Unit>
            # {abstract} createReplyMessage(event, botId): String?
            # {abstract} createPushNotifications(): List<Notification>
        }
        interface LineClient <<interface>> {
            + reply(token: String, message: String): Result<Unit>
            + push(to: String, message: String): Result<Unit>
        }
        interface SignatureVerifier <<interface>> {
            + verify(body: String, signature: String): Boolean
        }
        interface SecretProvider <<interface>> {
            + getSecret(key: String): String
        }
    }

    package "Infrastructure" #LightGray {
        package "Cloud" {
            class LineMessagingCloudClient {
                + reply(token: String, message: String): Result<Unit>
                + push(to: String, message: String): Result<Unit>
            }
            class LineSignatureCloudVerifier {
                + verify(body: String, signature: String): Boolean
            }
            class GoogleSecretProvider {
                + getSecret(key: String): String
            }
        }
        package "Mock" {
            class LineMessagingMockClient {
                + reply(token: String, message: String): Result<Unit>
                + push(to: String, message: String): Result<Unit>
            }
            class LineSignatureMockVerifier {
                + verify(body: String, signature: String): Boolean
            }
            class MockSecretProvider {
                + getSecret(key: String): String
            }
        }
    }
}

' --- Relationships ---

' App Presentation uses App Domain
WebhookRoute --> LineBotService
PushTriggerRoute --> LineBotService

' App Domain uses Core/App Domain interfaces
LineBotService .up.|> AbstractLineBotService
LineBotService --> SheetsRepository
AbstractLineBotService --> LineClient
AbstractLineBotService --> SignatureVerifier

' App Infra implements Core/App Domain interfaces
GoogleSheetsRepositoryImpl .up.|> SheetsRepository
LineMessagingClientImpl .up.|> LineClient
LineSignatureVerifierImpl .up.|> SignatureVerifier
SecretManagerProvider .up.|> SecretProvider

' Core Infra implements Core Domain interfaces
LineMessagingCloudClient .up.|> LineClient
LineSignatureCloudVerifier .up.|> SignatureVerifier
GoogleSecretProvider .up.|> SecretProvider
LineMessagingMockClient .up.|> LineClient
LineSignatureMockVerifier .up.|> SignatureVerifier
MockSecretProvider .up.|> SecretProvider

' App Infra internal dependencies
GoogleSheetsRepositoryImpl --> SecretManagerProvider

' App Infra bridges to Core Infra implementations
LineMessagingClientImpl ..> LineMessagingCloudClient
LineMessagingClientImpl ..> LineMessagingMockClient
LineSignatureVerifierImpl ..> LineSignatureCloudVerifier
LineSignatureVerifierImpl ..> LineSignatureMockVerifier
SecretManagerProvider ..> GoogleSecretProvider
SecretManagerProvider ..> MockSecretProvider

' Core Infra uses Core Domain interfaces
LineMessagingCloudClient --> SecretProvider
LineSignatureCloudVerifier --> SecretProvider

@enduml
